--- a/public/views/posts.html
+++ b/public/views/posts.html
@@ -1,8 +1,40 @@
-<div ng-controller="postsController">
+<div class="main" ng-controller="postsController">
 
-  {{ posts }} <br />
-  {{ notFound }} <br />
-  {{ hao }} <br />
-  {{ 5 + 5 }}
+  <!-- if no posts are found -->
+  <div class="container" ng-if="notFound==false">
+    <div class="row">
+      <h4 style="margin-top: 2em;">No Posts found</h4>
+    </div>
+  </div>
+
+  <!-- if there are posts received through the api -->
+  <div class="container" ng-if="notFound">
+        <div class="row">
+          <h3>Latest Posts</h3>
+        </div>
+
+        <!-- loop through the posts -->
+        <div class="row" ng-repeat="post in posts">
+          <div class="panel panel-default">
+            <div class="panel-body">
+              <div class="media">
+                <div class="media-left">
+                  <a href="#">
+                    <img class="media-object" src="http://placehold.it/150x150" alt="...">
+                  </a>
+                </div>
+                <div class="media-body">
+                  <h4 class="media-heading">Post title</h4>
+                  <span class="label label-success">Buy</span>
+                  <p><small><em>location, 1/1/2018</em></small></p>
+                  <p>
+                    {{ post.description.slice(0,150) }}
+                  </p>
+                  <a href="#" class="btn btn-primary">View more</a>
+                </div> <!-- End of media-body -->
+              </div> <!-- End of media -->
+            </div> <!-- End of panel-body -->
+          </div> <!-- End of panel -->
+        </div> <!-- End of row -->
 
 </div>
