fixed some stylings

--- a/public/css/header.css
+++ b/public/css/header.css
@@ -30,9 +30,9 @@
 	border-color:#ccc;
 }
 
-#search-input{
-  width: 400px;
-}
+/*#search-input{
+  max-width: 400px;
+}*/
 
 .stylish-input-group button{
     border:0;
@@ -45,24 +45,26 @@
 }
 
 #categories {
+  margin: auto;
+  text-align: center;
   display: flex;
-  position: relative;
-  margin-bottom: 0;
-  left: 10%;
+  justify-content: center;
 }
 
 #categories li a {
+  /*float: left;*/
+  display:inline-block;
   color: black;
   font-weight: 700;
-  border-top: 2px solid #E8EBEE;
-  width: 160px;
+  height: 100%;
+  /*max-width: 160px;*/
   text-align: center;
   /*margin: 0 20px;*/
 }
 
 #categories li a:hover {
   text-decoration: none;
-  background-color: #fAfAfA;
-  border-top: 2px solid #2e91f7;
+  background-color: #2e91f7;
+  color: white;
   border-radius: 0;
 }
