--- a/public/views/posts.html
+++ b/public/views/posts.html
@@ -28,8 +28,8 @@
                   <!-- displaying post type as the title as there is no title! -->
                   <h4 class="media-heading label label-success">{{ post.type | stringifyType }}</h4>
                   <!-- display post date -->
-                  <p><small><em>{{ post.date.toDateString() }}</em></small></p>
-                  <!-- fixing description length to display by 200 chars -->
+                  <p><small><em>{{ post.date | date }}</em></small></p>
+                  <!-- fixing description length to display by 250 chars -->
                   <p>{{ post.description.slice(0,250) }}...</p>
                   <!-- link to show post page -->
                   <a href="#" class="btn btn-primary">View more</a>
