fixed some stylings

--- a/public/views/posts.html
+++ b/public/views/posts.html
@@ -8,7 +8,7 @@
   </div>
 
   <!-- if there are posts received through the api -->
-  <div class="container" ng-if="notFound">
+  <div class="container" id="main" ng-if="notFound">
         <div class="row">
           <h3>Latest Posts</h3>
         </div>
