--- a/public/css/main.css
+++ b/public/css/main.css
@@ -13,18 +13,11 @@ body {
   margin-bottom: 60px;
 }
 
-#main h3 {
-  font-size: 24px;
+#main .row h3 {
+  font-size: 23px;
   margin-bottom: 20px;
 }
 
-#main .label {
-  position: relative;
-  top: -25px;
-  border-radius: 0;
-  float: right;
-  padding: 5px;
-}
 
 .panel {
   border-left: 3px solid #2e91f7;
