fixed errors form submit

--- a/public/views/editPost.html
+++ b/public/views/editPost.html
@@ -1,4 +1,7 @@
-<form class="jumbotron text-left" ng-submit="submitAdd()" ng-controller="postController">
+<!--put old data in the fields  -->
+
+
+<form class="jumbotron text-left" ng-submit="submitEdit()" ng-controller="postController">
     <div class="form-group">
         <h3>Add Post</h3>
         <label for="type">Post Type</label> <br>
