--- a/public/views/posts.html
+++ b/public/views/posts.html
@@ -1,20 +1,20 @@
 <div class="main" ng-controller="postsController">
 
   <!-- if no posts are found -->
-  <div class="container" ng-if="notFound==false">
+  <div class="container" ng-if="notFound==true">
     <div class="row">
       <h4 style="margin-top: 2em;">No Posts found</h4>
     </div>
   </div>
 
   <!-- if there are posts received through the api -->
-  <div class="container" id="main" ng-if="notFound">
+  <div class="container" id="main" ng-if="notFound==false">
         <div class="row">
           <h3>Latest Posts</h3>
         </div>
 
         <!-- loop through the posts -->
-        <div class="row" ng-repeat="post in posts">
+        <div class="row" ng-repeat="post in posts | startFrom:(currentPage - 1) * pageSize | limitTo:pageSize">
           <div class="panel panel-default">
             <div class="panel-body">
               <div class="media">
@@ -38,5 +38,15 @@
             </div> <!-- End of panel-body -->
           </div> <!-- End of panel -->
         </div> <!-- End of row -->
+
+        <ul uib-pagination boundary-links="true"
+            total-items="posts.length"
+            ng-model="currentPage"
+            max-size="maxSize"
+            class="pagination-md pagination"
+            previous-text="&lsaquo;" next-text="&rsaquo;" first-text="&laquo;" last-text="&raquo;">
+        </ul>
+
       </div> <!-- End of container -->
+
 </div> <!-- End of main -->
