--- a/public/views/posts.html
+++ b/public/views/posts.html
@@ -28,7 +28,7 @@
                   <!-- displaying post type as the title as there is no title! -->
                   <h4 class="media-heading label label-success">{{ post.type | stringifyType }}</h4>
                   <!-- display post date -->
-                  <p><small><em>{{ post.date | date }}</em></small></p>
+                  <p><small class="date"><em>{{ post.date | date }}</em></small></p>
                   <!-- fixing description length to display by 250 chars -->
                   <p>{{ post.description.slice(0,250) }}...</p>
                   <!-- link to show post page -->
@@ -39,8 +39,10 @@
           </div> <!-- End of panel -->
         </div> <!-- End of row -->
 
-        <ul uib-pagination boundary-links="true"
+        <ul uib-pagination
+            boundary-links="true"
             total-items="posts.length"
+            items-per-page="pageSize"
             ng-model="currentPage"
             max-size="maxSize"
             class="pagination-md pagination"
