--- a/public/views/editPost.html
+++ b/public/views/editPost.html
@@ -26,15 +26,15 @@
         <!--check to be visible type exchange only -->
         <div ng-switch="post.type">
             <div ng-switch-when="exchange">
-                <label for="kind_B"> Other Animal kind</label> <br>
-                <input type="text" name="kind_B" ng-model="post.kind_B" placeholder=" Other Animal Kind"> <br>
+                <label for="kindB"> Other Animal kind</label> <br>
+                <input type="text" name="kindB" ng-model="post.kindB" placeholder=" Other Animal Kind"> <br>
 
-                <label for="species_B">Other Animal species </label> <br>
-                <input type="text" name="species_B" ng-model="post.species_B" placeholder="Other Animal species"> <br>
+                <label for="speciesB">Other Animal species </label> <br>
+                <input type="text" name="speciesB" ng-model="post.speciesB" placeholder="Other Animal species"> <br>
 
-                <label for="gender_B">Other Animal gender</label> <br>
-                <input type="radio" name="gender_B" ng-model="post.gender_B" value="male"> Male
-                <input type="radio" name="gender_B" ng-model="post.gender_B" value="female"> Female <br>
+                <label for="gende_B">Other Animal gender</label> <br>
+                <input type="radio" name="genderB" ng-model="post.genderB" value="male"> Male
+                <input type="radio" name="genderB" ng-model="post.genderB" value="female"> Female <br>
             </div>
         </div>
         <!--check to be visible type exchange only -->
