--- a/public/views/login.html
+++ b/public/views/login.html
@@ -1,5 +1,5 @@
 <div ng-controller="loginCtrl">
-	<form action="/" id="login">
+	<form action="/profile" id="login">
 		Username: <input type="text" id = "username" ng-model="formData.username"><br>
 		Password: <input type="password" id = "Password" ng-model="formData.password"><br>
 		<button type="button" ng-click="submit()">Login</button>
