review working in console

--- a/public/views/viewMore.html
+++ b/public/views/viewMore.html
@@ -8,7 +8,7 @@
        <input type="radio" value="down" ng-model="formData.vote">Down-vote
      </label>
      <br> <br>
-     <button type="button" class="btn btn-success">Submit</button>
+     <button type="submit" class="btn btn-success">Submit</button>
     </form>
 
 
