Search Done Working Well

--- a/public/views/search.html
+++ b/public/views/search.html
@@ -4,7 +4,7 @@
   <!--  -->
   <div class="container"  ng-if="notFound==true">
     <div class="row">
-      <h4 style="margin-top: 2em;">No Posts found</h4>
+      <h4 style="margin-top: 2em;">No Posts Found</h4>
     </div>
   </div>
 
