--- a/public/views/editProfile.html
+++ b/public/views/editProfile.html
@@ -38,12 +38,26 @@
             <input type="password" name="password" ng-model="password"> <br>
             <label for="verify"> Confirm your current password : </label> <br>
             <input type="password" name="verify" ng-model="verify"> <br>
+            
             <label for="newPassword"> Your new password : </label> <br>
             <input type="password" name="newPassword" ng-model="newPassword"> <br>
             <label for="verNewPassword"> Confirm your new password : </label> <br>
             <input type="password" name="verNewPassword" ng-model="verNewPassword"> <br>
             
             <button type="submit" class="btn btn-default">Change password</button>
+            
+            <div ng-if="messageEmpty">
+                {{messageEmpty}}
+            </div>
+            <div ng-if="messageOld">
+                {{messageOld}}
+            </div>
+            <div ng-if="messageNew">
+                {{messageNew}}
+            </div>
+            <div ng-if="messageError">
+                {{messageError}}
+            </div>
         
         </div>
     </form>
@@ -56,9 +70,16 @@
             <input type="password" name="password" ng-model="dPassword"> <br>
             <label for="verify"> Confirm your current password : </label> <br>
             <input type="password" name="verify" ng-model="dVerify"> <br>
-    
+        
             <button type="submit" class="btn btn-default">Bye bye :(</button>
         
+            <div ng-if="messagePass">
+                {{messagePass}}
+            </div>
+            <div ng-if="messageNotGiven">
+                {{messageNotGiven}}
+            </div>
+
         </div>
     </form>
 
