--- a/public/views/profile.html
+++ b/public/views/profile.html
@@ -42,8 +42,14 @@ table th, table td, table tr {
                         </div>
                         <div ng-if="myEmail!=userInfo.email">
                             <form name="rateForm" ng-controller="profileController" ng-submit="submitRate()">
-                                <input type="text" name="rate" ng-model="rate" placeholder="A number from 1-5"> <br>
+                                <input type="number" name="rate" ng-model="rate" placeholder="A number from 1-5"> <br>
                                 <button type="submit" class="btn btn-default">Rate {{userInfo.userName}}</button>
+                                <div ng-if="message" type = "danger">
+                                    {{message}}
+                                </div>
+                                <div ng-if="messageRated" type = "danger">
+                                    {{messageRated}}
+                                </div>
                             </form>
                         </div>
                     </td>
@@ -51,30 +57,37 @@ table th, table td, table tr {
             </table>
         </td>
         <td>
-            <div ng-repeat="post in Posts">
-                <div class="panel panel-default">
-                    <div class="panel-body">
-                        <div class="media">
-                            <div class="media-left">
-                                <!-- post image -->
-                                <a href="#">
-                                    <img class="media-object" src="http://placehold.it/150x150" alt="...">
-                                </a>
-                            </div>
-                            <div class="media-body">
-                                <!-- displaying post type as the title as there is no title! -->
-                                <h4 class="media-heading label label-success">{{ post.type | stringifyType }}</h4>
-                                <!-- display post date -->
-                                <p><small><em>{{ post.date | date }}</em></small></p>
-                                <!-- fixing description length to display by 250 chars -->
-                                <p>{{ post.description.slice(0,250) }}...</p>
-                                <!-- link to show post page -->
-                                <a href="#" class="btn btn-primary">View more</a>
-                            </div> <!-- End of media-body -->
-                        </div> <!-- End of media -->
-                    </div> <!-- End of panel-body -->
-                </div> <!-- End of panel -->
-            </div> <!-- End of row -->
+            <div ng-if="!Posts">
+                <h3>
+                    This user has no posts yet.
+                </h3>
+            </div>
+            <div ng-if="Posts">
+                <div ng-repeat="post in Posts">
+                    <div class="panel panel-default">
+                        <div class="panel-body">
+                            <div class="media">
+                                <div class="media-left">
+                                    <!-- post image -->
+                                    <a href="#">
+                                        <img class="media-object" src="http://placehold.it/150x150" alt="...">
+                                    </a>
+                                </div>
+                                <div class="media-body">
+                                    <!-- displaying post type as the title as there is no title! -->
+                                    <h4 class="media-heading label label-success">{{ post.type | stringifyType }}</h4>
+                                    <!-- display post date -->
+                                    <p><small><em>{{ post.date | date }}</em></small></p>
+                                    <!-- fixing description length to display by 250 chars -->
+                                    <p>{{ post.description.slice(0,250) }}...</p>
+                                    <!-- link to show post page -->
+                                    <a href="#" class="btn btn-primary">View more</a>
+                                </div> <!-- End of media-body -->
+                            </div> <!-- End of media -->
+                        </div> <!-- End of panel-body -->
+                    </div> <!-- End of panel -->
+                </div> <!-- End of row -->
+            </div>
         </td>
     </table>
 </div>
