--- a/public/views/profile.html
+++ b/public/views/profile.html
@@ -63,6 +63,7 @@ table th, table td, table tr {
                 </h3>
             </div>
             <div ng-if="Posts">
+                <a id="new-btn" href="/post/new" class="btn btn-primary">Create a new Post!</a>
                 <div ng-repeat="post in Posts">
                     <div class="panel panel-default">
                         <div class="panel-body">
@@ -81,7 +82,10 @@ table th, table td, table tr {
                                     <!-- fixing description length to display by 250 chars -->
                                     <p>{{ post.description.slice(0,250) }}...</p>
                                     <!-- link to show post page -->
-                                    <a href="#" class="btn btn-primary">View more</a>
+                                    <div ng-controller="profileController" ng-click="editPost()">
+                                        <button type="button" class="btn btn-primary" id="edit-btn">Edit</button>
+                                    </div>
+                                    <a id="view-btn" href="#" class="btn btn-primary">View more</a>
                                 </div> <!-- End of media-body -->
                             </div> <!-- End of media -->
                         </div> <!-- End of panel-body -->
@@ -91,3 +95,22 @@ table th, table td, table tr {
         </td>
     </table>
 </div>
+
+<style>
+
+    #edit-btn {
+        border-top-left-radius: 0;
+        border-bottom-left-radius: 0;
+    }
+
+    #new-btn {
+        margin-left: 2px; 
+    }
+
+    #view-btn {
+        border-top-right-radius: 0;
+        border-bottom-right-radius: 0;
+        border-right: 1px solid rgb(0,70,160);
+    }
+
+</style>
