--- a/public/views/editPost.html
+++ b/public/views/editPost.html
@@ -4,7 +4,7 @@
 
     <form class="jumbotron text-left" ng-submit="submitEdit()">
         <div class="form-group">
-            <h3>Add Post</h3>
+            <h3>Edit Post</h3>
             <label for="type">Post Type</label> <br>
             <input type="radio" name="type" ng-model="post.type" value="sell"> Sell
             <input type="radio" name="type" ng-model="post.type" value="exchange"> Exchange
