ViewMore Working in Cosnole

--- a/public/views/viewMore.html
+++ b/public/views/viewMore.html
@@ -2,10 +2,10 @@
       <!-- up & down vote form -->
       <form ng-controller="reviewPostController" ng-submit="submitVote()">
      <label class="radio-inline">
-       <input type="radio" value="up"   ng-model="formData.vote">Up-vote
+       <input type="radio" value="up"   ng-model="vote">Up-vote
      </label>
      <label class="radio-inline">
-       <input type="radio" value="down" ng-model="formData.vote">Down-vote
+       <input type="radio" value="down" ng-model="vote">Down-vote
      </label>
      <br> <br>
      <button type="submit" class="btn btn-success">Submit</button>
@@ -15,9 +15,11 @@
    <!-- info form  -->
    <hr>
    <form>
-   <p><strong>Owner Name :</strong></p>
-   <p><strong>Mobile Number :</strong></p>
-   <p><strong>Email :&nbsp;</strong></p>
-   <p><strong>Related Pictuers :&nbsp;</strong></p>
+  <p><strong>Post Up-Votes :{{upVotes}}</strong></p>
+  <p><strong>Post Down-Votes :{{downVotes}}</strong></p>
+   <p><strong>Owner Name :{{firstName }} {{lastName}}</strong></p>
+   <p><strong>Mobile Number :{{mobile}}</strong></p>
+   <p><strong>Email :{{email}}</strong></p>
+   <p><strong>Related Pictuers :</strong></p>
    <a href="">Visit Owner's Profile</a>
    </form>
