--- a/public/views/posts.html
+++ b/public/views/posts.html
@@ -14,7 +14,7 @@
         </div>
 
         <!-- loop through the posts -->
-        <div class="row" ng-controller="viewMoreDirectionController" ng-repeat="post in posts | startFrom:(currentPage - 1) * pageSize | limitTo:pageSize">
+        <div class="row" ng-repeat="post in posts | startFrom:(currentPage - 1) * pageSize | limitTo:pageSize">
           <div class="panel panel-default">
             <div class="panel-body">
               <div class="media">
@@ -25,7 +25,6 @@
                   </a>
                 </div>
                 <div class="media-body">
-                  <h3> {{post.id}} </h3>
                   <!-- displaying post type as the title as there is no title! -->
                   <h4 class="media-heading label label-success">{{ post.type | stringifyType }}</h4>
                   <!-- display post date -->
@@ -33,9 +32,7 @@
                   <!-- fixing description length to display by 250 chars -->
                   <p>{{ post.description.slice(0,250) }}...</p>
                   <!-- link to show post page -->
-
-        <button  class="btn btn-primary"  ng-click="submitViewMore()">View more</button>
-
+                  <a href="#" class="btn btn-primary">View more</a>
                 </div> <!-- End of media-body -->
               </div> <!-- End of media -->
             </div> <!-- End of panel-body -->
