--- a/public/views/posts.html
+++ b/public/views/posts.html
@@ -14,7 +14,7 @@
         </div>
 
         <!-- loop through the posts -->
-        <div class="row" ng-repeat="post in posts | startFrom:(currentPage - 1) * pageSize | limitTo:pageSize">
+        <div class="row" ng-controller="viewMoreDirectionController" ng-repeat="post in posts | startFrom:(currentPage - 1) * pageSize | limitTo:pageSize">
           <div class="panel panel-default">
             <div class="panel-body">
               <div class="media">
@@ -32,7 +32,7 @@
                   <!-- fixing description length to display by 250 chars -->
                   <p>{{ post.description.slice(0,250) }}...</p>
                   <!-- link to show post page -->
-                  <a href="#" class="btn btn-primary">View more</a>
+                  <a href="#" class="btn btn-primary" ng-click="submitViewMore()">View more</a>
                 </div> <!-- End of media-body -->
               </div> <!-- End of media -->
             </div> <!-- End of panel-body -->
