image tag added

--- a/public/views/viewMore.html
+++ b/public/views/viewMore.html
@@ -18,6 +18,8 @@
   <p><strong>Post Up-Votes :{{upVotes}}</strong></p>
   <p><strong>Post Down-Votes :{{downVotes}}</strong></p>
    <p><strong>Email :{{email}}</strong></p>
-   <p><strong>Related Pictuers :</strong></p>
+   <p><strong>Post Picture :</strong></p>
+    <img src={{picture}} alt="No Image Available for this Post" height="42" width="42">
+    <hr>
    <a href="">Visit Owner's Profile</a>
    </form>
