--- a/public/css/header.css
+++ b/public/css/header.css
@@ -42,6 +42,7 @@
 .categories-container {
   background-color: #E8EBEE;
   box-sizing: border-box;
+  box-shadow: 0 1px 3px #b2b4b7;
 }
 
 #categories {
