--- a/public/views/forgotPassword.html
+++ b/public/views/forgotPassword.html
@@ -1,7 +1,12 @@
-<div ng-controller="pass_ctrl">
+<link rel="stylesheet" href="../css/forgetPassword.css">
+
+<div ng-controller="pass_ctrl" class="container forgetPassword-form">
 	<form action="/" id="pass">
-		Please enter you email: <input type="text" id = "email" ng-model="formData.email"><br>
-		<button type="button" ng-click="reset()">Reset Password</button>
+		<div class="form-group">
+			<label>Please enter your email</label>
+			<input type="text" id = "email" ng-model="formData.email" class="form-control">
+		</div>
+		<button type="button" ng-click="reset()" class="btn btn-primary btn-block">Reset Password</button>
 	</form>
 	<div ng-if="errorMessage" type = "danger">{{ errorMessage }}</div>
 </div>
