--- a/public/views/login.html
+++ b/public/views/login.html
@@ -1,9 +1,27 @@
-<div ng-controller="loginCtrl">
-	<form  id="login">
-		Username: <input type="text" id = "username" ng-model="formData.username"><br>
-		Password: <input type="password" id = "Password" ng-model="formData.password"><br>
-		<button type="button" ng-click="submit()">Login</button>
-	</form>
-	<button type="button" ng-click="forgot()">Forgot my Password</button>
+<link rel="stylesheet" href="../css/login.css">
+
+
+<div ng-controller="loginCtrl" class="container login-form">
+
+	<h3 class="text-center">Login to your pettts.com account</h3>
+
 	<div ng-if="errorMessage" type = "danger">{{ errorMessage }}</div>
+
+	<form id="login">
+		<div class="form-group">
+			<label>Username</label>
+			<input type="text" id = "username" ng-model="formData.username" class="form-control">
+		</div>
+
+		<div class="form-group">
+			<label style="display: block">Password <span style="float: right"><a href="/forgotPassword">Forget Password</a></span></label>
+			<input type="password" id = "Password" ng-model="formData.password" class="form-control">
+		</div>
+		<button type="button" ng-click="submit()" class="btn btn-success btn-block">Login</button>
+	</form>
+
+	<hr>
+
+	<p class="text-center">Don't have an account? <a href="/register">Register Now!</a>	</p>
+
 </div>
