profile page almost done

--- a/public/views/editProfile.html
+++ b/public/views/editProfile.html
@@ -1,4 +1,5 @@
 <div  ng-controller="profileController">
+    <div class="container">
     <form class="jumbotron text-left" ng-controller="profileController" ng-submit="submitEdit()">
         <div class="form-group">
             <label for="editChoice">These are your profile settings.<br/>
@@ -82,5 +83,6 @@
 
         </div>
     </form>
+    </div>
 
 </div>
