--- a/public/views/profile.html
+++ b/public/views/profile.html
@@ -1,114 +1,106 @@
-<style>
-   
-    table th, table td, table tr {
-        vertical-align: top;
-    }
-
-    #edit-btn {
-        border-top-left-radius: 0;
-        border-bottom-left-radius: 0;
-    }
-
-    #new-btn {
-        margin-left: 2px; 
-    }
-
-    #view-btn {
-        border-top-right-radius: 0;
-        border-bottom-right-radius: 0;
-        border-right: 1px solid rgb(0,70,160);
-    }
-</style>
+<link rel="stylesheet" href="../css/profile.css">
 <div ng-controller="profileController">
     <div ng-if="success">
-        <table style=" width:90%; margin:auto">
-                <td>
-                <table width="175">
-                    <tr style="width:150px;height:150px">
-                        <td>
-                        My profile Picture
-                        </td>
-                    </tr>
-                    <tr>
-                        <td>
-                            {{userInfo.userName}}<br/>
-                            rating is {{userInfo.rate}}
-                        </td>
-                    </tr>
-                    <tr>
-                        <td>
-                            {{userInfo.firstName}} {{userInfo.lastName}}
-                        </td>
-                    </tr>
-                    <tr>
-                        <td>
-                            {{userInfo.email}}</br>
-                            {{userInfo.phoneNumber1}}</br>
-                            {{userInfo.phoneNumber2}}</br>
-                            {{userInfo.homeNumber}}</br></br>
-                        </td>
-                    </tr>
-                    <tr>
-                        <td>
-                            <div ng-if="myEmail==userInfo.email">
-                                <form>
-                                    <a  href="/editProfile" class="btn btn-primary">Profile settings</a>    
-                                </form>
+        <div class="container" id="profile-container">
+            <div class="row">
+                <div class="col-md-3"><!-- Start of profile info -->
+                    <img src="../images/default.jpg" alt="" class="img-responsive img-thumbnail"> <br>
+                    <h2>{{userInfo.firstName}} {{userInfo.lastName}}</h2>
+                    <p>{{userInfo.username}}</p>
+                    <div ng-if="userInfo.rate==0">
+                        <div ng-repeat="i in [1,2,3,4,5]" id="stars1">
+                            <span class="glyphicon glyphicon-star" aria-hidden="true"></span>
+                        </div>
+                    </div>
+                    <div ng-if="userInfo.rate!=0">
+                        <div ng-repeat="i in [1,2,3,4,5]" id="stars2">
+                            <div ng-if="i<=userInfo.rate" id="stars3">
+                                <span class="glyphicon glyphicon-star-full" aria-hidden="true"></span>
                             </div>
-                            <div ng-if="myEmail!=userInfo.email">
-                                <form name="rateForm" ng-controller="profileController" ng-submit="submitRate()">
-                                    <input type="number" name="rate" ng-model="rate" placeholder="A number from 1-5"> <br>
-                                    <button type="submit" class="btn btn-default">Rate {{userInfo.userName}}</button>
-                                    <div ng-if="message" type = "danger">
-                                        {{message}}
-                                    </div>
-                                    <div ng-if="messageRated" type = "danger">
-                                        {{messageRated}}
-                                    </div>
-                                </form>
+                            <div ng-if="i>userInfo.rate" id="stars4">
+                                <span class="glyphicon glyphicon-star" aria-hidden="true"></span>
                             </div>
-                        </td>
-                    </tr>
-                </table>
-            </td>
-            <td>
-                <div ng-if="!Posts">
-                    <h3>
-                        This user has no posts yet.
-                    </h3>
-                </div>
-               <a id="new-btn" href="/post/new" class="btn btn-primary">Create a new Post!</a>
-                <div ng-if="Posts">
-                    <div ng-repeat="post in Posts">
-                        <div class="panel panel-default">
-                            <div class="panel-body">
-                                <div class="media">
-                                    <div class="media-left">
-                                        <!-- post image -->
-                                        <a href="#">
-                                            <img class="media-object" src="http://placehold.it/150x150" alt="...">
-                                        </a>
-                                    </div>
-                                    <div class="media-body">
-                                        <!-- displaying post type as the title as there is no title! -->
-                                        <h4 class="media-heading label label-success">{{ post.type | stringifyType }}</h4>
-                                        <!-- display post date -->
-                                        <p><small><em>{{ post.date | date }}</em></small></p>
-                                        <!-- fixing description length to display by 250 chars -->
-                                        <p>{{ post.description.slice(0,250) }}...</p>
-                                        <!-- link to show post page -->
-                                        <div ng-controller="profileController" ng-click="editPost()">
-                                            <button type="button" class="btn btn-primary" id="edit-btn">Edit</button>
+                        </div>
+                    </div>
+                    <hr>
+                    <h6>Contact Information</h6>
+                    <span class="glyphicon glyphicon-envelope" aria-hidden="true">
+                        {{userInfo.email}}
+                    </span><br>
+                    <div ng-if="userInfo.phoneNumber1">
+                        <span class="glyphicon glyphicon-phone" aria-hidden="true">
+                            1234{{userInfo.phoneNumber1}}
+                        </span><br>
+                    </div>
+                    <div ng-if="userInfo.phoneNumber1">
+                        <span class="glyphicon glyphicon-phone" aria-hidden="true">
+                            {{userInfo.phoneNumber2}}
+                        </span><br>
+                    </div>
+                    <div ng-if="userInfo.phoneNumber1">
+                        <span class="glyphicon glyphicon-phone" aria-hidden="true">
+                            {{userInfo.homeNumber}}
+                        </span><br>
+                    </div>
+                    <hr>
+                    <div ng-if="myEmail==userInfo.email">
+                        <form>
+                            <a  href="/editProfile" class="btn btn-primary" id="profile-edit-btn">Profile settings</a>    
+                        </form>
+                    </div>
+                    <div ng-if="myEmail!=userInfo.email">
+                        <form name="rateForm" ng-controller="profileController" ng-submit="submitRate()">
+                            <input type="number" name="rate" ng-model="rate" placeholder="A number from 1-5"> <br>
+                            <button type="submit" class="btn btn-default">Rate {{userInfo.username}}</button>
+                            <div ng-if="message" type = "danger">
+                                {{message}}
+                            </div>
+                            <div ng-if="messageRated" type = "danger">
+                                {{messageRated}}
+                            </div>
+                        </form>
+                    </div>
+                </div><!-- End of profile info -->
+                <div class="col-md-9"><!-- Start of posts area -->
+                    <div ng-if="!Posts">
+                        <h3>
+                            This user has no posts yet.
+                        </h3>
+                    </div>
+                    <a id="new-btn" href="/post/new" class="btn btn-primary">Create a new Post!</a>
+                    <hr>
+                    <div ng-if="Posts">
+                        <div ng-repeat="post in Posts">
+                            <div class="panel panel-default">
+                                <div class="panel-body">
+                                    <div class="media">
+                                        <div class="media-left">
+                                            <!-- post image -->
+                                            <a href="#">
+                                                <img class="media-object" src="http://placehold.it/150x150" alt="...">
+                                            </a>
                                         </div>
-                                        <a id="view-btn" href="#" class="btn btn-primary">View more</a>
-                                    </div> <!-- End of media-body -->
-                                </div> <!-- End of media -->
-                            </div> <!-- End of panel-body -->
-                        </div> <!-- End of panel -->
-                    </div> <!-- End of row -->
-                </div>
-            </td>
-        </table>
+                                        <div class="media-body">
+                                            <!-- displaying post type as the title as there is no title! -->
+                                            <h4 class="media-heading label label-success">{{ post.type | stringifyType }}</h4>
+                                            <!-- display post date -->
+                                            <p><small><em>{{ post.date | date }}</em></small></p>
+                                            <!-- fixing description length to display by 250 chars -->
+                                            <p>{{ post.description.slice(0,250) }}...</p>
+                                            <!-- link to show post page -->
+                                            <div ng-controller="profileController" ng-click="editPost()">
+                                                <button type="button" class="btn btn-primary" id="edit-btn">Edit</button>
+                                            </div>
+                                            <a id="view-btn" href="#" class="btn btn-primary">View more</a>
+                                        </div> <!-- End of media-body -->
+                                    </div> <!-- End of media -->
+                                </div> <!-- End of panel-body -->
+                            </div> <!-- End of panel -->
+                        </div> <!-- End of row -->
+                    </div>
+                </div><!-- End of posts area -->
+            </div>
+        </div>
     </div>
     <div ng-if="!success">
         <h3 align="center">
