--- a/public/views/starterPage.html
+++ b/public/views/starterPage.html
@@ -6,12 +6,12 @@
     <link href="/favicon.ico" type="image/x-icon" rel="icon" />
 
 <style>
-    
-    
+
+
 body{
-    background-image:url(/home/mohamed_almorsi/Desktop/veronika-homchis-64124.jpg);
+    background-image:url("../images/veronika-homchis-64124.jpg");
     background-size: cover;
-    background-position: center;    
+    background-position: center;
 }
 html{
     height: 100%;
@@ -42,7 +42,7 @@ hr{
 
 .navbar-inverse .navbar-nav>li>a{
     color: white;
-    
+
 }
 .navbar-inverse .navbar-brand{
     color: white;
@@ -76,27 +76,27 @@ hr{
     <title>
     Pettts.com
     </title>
-    <body>
-         
-       
-        <div class ="content">
-           <h3>
-        Pettts.com </h3> 
-            <h5>    
-                All You Need For Your Pets 
-            </h5>
-            <hr>
-            <p><a class="btn btn-success btn-lg" href="./main" role="button"><i class="fa fa-sign-in"></i> Get Started</a></p>
 
-    </div>   
-    </body> 
-    
-   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+<body>
+
+  <div class ="content">
+    <h3>Pettts.com</h3>
+    <h5>All You Need For Your Pets</h5>
+    <hr>
+    <p>
+      <a class="btn btn-success btn-lg" href="./main" role="button">
+        <i class="fa fa-sign-in"></i> Get Started
+      </a>
+    </p>
+  </div>
+</body>
+
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
- 
+
 
     </script>
-    
+
     </head>
 
 </html>
