--- a/public/views/register.html
+++ b/public/views/register.html
@@ -6,7 +6,7 @@
 
   <div class="registerForm">
 
-    <h2>Join the pettts.com marketplace now!</h2>
+    <h2>Enter the pettts.com marketplace now!</h2>
     <p class="subtitle-register">Get started now - it's for free</p>
 
     <hr>
@@ -15,47 +15,47 @@
 
       <div class="form-group">
         <label for="username">Username</label>
-        <input type="text" name="username" ng-model="user.username" required placeholder="username" class="form-control">
+        <input type="text" name="username" ng-model="user.username" required class="form-control">
       </div>
 
       <div class="form-group">
         <label for="password">Password</label>
-        <input type="password" name="password" ng-model="user.password" required placeholder="password" class="form-control">
+        <input type="password" name="password" ng-model="user.password" required class="form-control">
       </div>
 
       <div class="form-group">
         <label for="email">Email</label>
-        <input type="text" name="email" ng-model="user.email" required placeholder="email" class="form-control">
+        <input type="text" name="email" ng-model="user.email" required class="form-control">
       </div>
 
       <div class="form-group">
         <label for="firstName">First name</label>
-        <input type="text" name="firstName" ng-model="user.firstName" required placeholder="firstName" class="form-control">
+        <input type="text" name="firstName" ng-model="user.firstName" required class="form-control">
       </div>
 
       <div class="form-group">
         <label for="middleName">Middle name</label>
-        <input type="text" name="middleName" ng-model="user.middleName" placeholder="middleName" class="form-control">
+        <input type="text" name="middleName" ng-model="user.middleName" class="form-control">
       </div>
 
       <div class="form-group">
         <label for="lastName">Last name</label>
-        <input type="text" name="lastName" ng-model="user.lastName" required placeholder="lastName" class="form-control">
+        <input type="text" name="lastName" ng-model="user.lastName" required class="form-control">
       </div>
 
       <div class="form-group">
         <label for="phoneNumber1">Phone number 1</label>
-        <input type="text" name="phoneNumber1" ng-model="user.phoneNumber1" placeholder="phoneNumber1" class="form-control">
+        <input type="text" name="phoneNumber1" ng-model="user.phoneNumber1" class="form-control">
       </div>
 
       <div class="form-group">
         <label for="phoneNumber2">Phone number 2</label>
-        <input type="text" name="phoneNumber2" ng-model="user.phoneNumber2" placeholder="phoneNumber2" class="form-control">
+        <input type="text" name="phoneNumber2" ng-model="user.phoneNumber2" class="form-control">
       </div>
 
       <div class="form-group">
         <label for="homeNumber">Home number</label>
-        <input type="text" name="homeNumber" ng-model="user.homeNumber" placeholder="homeNumber" class="form-control">
+        <input type="text" name="homeNumber" ng-model="user.homeNumber" class="form-control">
       </div>
 
       <div class="form-group">
@@ -63,7 +63,7 @@
         <input type="file" name="profilePic" ng-File-Model="user.profilePic" />
       </div>
 
-      <button type="submit" class="btn btn-success btn-block">Join</button>
+      <button type="submit" class="btn btn-success btn-block">Join now</button>
 
       <hr>
 
