changing image route

--- a/public/views/starterPage.html
+++ b/public/views/starterPage.html
@@ -9,7 +9,7 @@
     
     
 body{
-    background-image:url(/home/mohamed_almorsi/Desktop/veronika-homchis-64124.jpg);
+    background-image:url("../images/starterimagebackgrou_yeBSQ.jpg");
     background-size: cover;
     background-position: center;    
 }
