changing image route

--- a/public/views/pageNotFound.html
+++ b/public/views/pageNotFound.html
@@ -16,7 +16,7 @@
 }
 
 body{
-    background-image:url(/home/mohamed_almorsi/Desktop/dog.jpg);
+    background-image:url(../images/notfoundbacground.jpg);
     background-size: cover;
     background-position: center;
     
