changing image route

--- a/public/views/about.html
+++ b/public/views/about.html
@@ -10,7 +10,7 @@
     
     
 body{
-    background-image:url(/home/mohamed_almorsi/Desktop/cristina-schek-155293.jpg);
+    background-image:url("../images/aboutimagebacground.jpg");
     background-size: cover;
     background-position: center;
     
