--- a/public/views/filter.html
+++ b/public/views/filter.html
@@ -32,7 +32,9 @@
                   <!-- fixing description length to display by 250 chars -->
                   <p>{{ post.description.slice(0,250) }}...</p>
                   <!-- link to show post page -->
-                  <a href="#" class="btn btn-primary">View more</a>
+                  <div ng-controller="profileController" ng-click="viewPost()">
+                    <button type="button" class="btn btn-primary" id="edit-btn">View more</button>
+                  </div>
                 </div> <!-- End of media-body -->
               </div> <!-- End of media -->
             </div> <!-- End of panel-body -->
