--- a/public/views/viewMore.html
+++ b/public/views/viewMore.html
@@ -9,17 +9,30 @@
      </label>
      <br> <br>
      <button type="submit" class="btn btn-success">Submit</button>
+     <div>{{message}}</div>
     </form>
 
 
    <!-- info form  -->
    <hr>
    <form ng-controller= "reviewPostController">
-  <p><strong>Post Up-Votes :{{upVotes}}</strong></p>
-  <p><strong>Post Down-Votes :{{downVotes}}</strong></p>
-   <p><strong>Email :{{email}}</strong></p>
-   <p><strong>Post Picture :</strong></p>
-    <img src={{picture}} alt="No Image Available for this Post" height="42" width="42">
+    <p><strong>Post Up-Votes : {{upVotes}}</strong></p>
+    <p><strong>Post Down-Votes : {{downVotes}}</strong></p>
+    <p><strong>Email : {{email}}</strong></p>
+    <p><strong>Species : {{species}}</strong></p>
+    <p><strong>Kind : {{kind}}</strong></p>
+    <p><strong>Gender : {{gender}}</strong></p>
+    <p><strong>Description : {{description}}</strong></p>
+    <div ng-if="exchange">
+      <p><strong>SpeciesB : {{speciesB}}</strong></p>
+      <p><strong>KindB : {{kindB}}</strong></p>
+      <p><strong>GenderB : {{genderB}}</strong></p>
+    </div>
+    <div ng-if="sell">
+      <p><strong>Price :{{price}}</strong></p>
+    </div>
+    <p><strong>Post Picture :</strong></p>
+    <img ng-src="{{picture}}" alt="No Image Available for this Post" height="42" width="42">
     <hr>
-   <a href="">Visit Owner's Profile</a>
+   <a href="/profile/{{username}}">Visit Owner's Profile</a>
    </form>
